--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "lovelace-card-tester",
   "version": "1.0.0",
   "description": "Website for testing lovelace cards",
-  "main": "preview.html",
+  "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node_modules/.bin/rollup -c"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,18 @@
     "url": "https://github.com/maxwroc/lovelace-card-tester/issues"
   },
   "homepage": "https://github.com/maxwroc/lovelace-card-tester#readme",
-  "dependencies": {}
+  "dependencies": {
+    "codeflask": "^1.4.1",
+    "lit-element": "^2.3.1"
+  },
+  "devDependencies": {
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-typescript": "^5.0.2",
+    "@types/codeflask": "^1.4.1",
+    "@types/jquery": "^3.5.1",
+    "rollup": "^2.26.8",
+    "rollup-plugin-terser": "^7.0.1",
+    "tslib": "^2.0.1",
+    "typescript": "^4.0.2"
+  }
 }
