Moved files around

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,10 @@
         "noImplicitThis": true,
         "strict": true,
         "experimentalDecorators": true,
-        "suppressImplicitAnyIndexErrors": true
-    }
+        "suppressImplicitAnyIndexErrors": true,
+        "moduleResolution": "node"
+    },
+    "exclude": [
+        "dist/**/*"
+    ]
 }
